--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,61 @@ body {
   background-repeat: no-repeat;
   background-size: cover; }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #2aacb8;
+  padding: 1rem; }
+
+@media all and (max-width: 700px) {
+  .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: red;
+    transform: translateX(-100vw);
+    transition: 0.5s; }
+  .nav--show {
+    transform: translateX(0); }
+  .nav__button {
+    text-align: right;
+    margin: 1rem; }
+  .nav__ul {
+    list-style: none;
+    padding: 0;
+    margin: 0; }
+  .nav__link {
+    display: block;
+    padding: 1rem;
+    font-size: 1.5rem;
+    text-align: center;
+    text-decoration: none;
+    color: black; } }
+
+@media all and (min-width: 701px) {
+  .nav__button,
+  .header__button-nav--open {
+    display: none; }
+  .nav__ul {
+    display: flex;
+    list-style: none;
+    padding: 0; }
+  .nav__link {
+    display: block;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    color: black;
+    transition: 0.5s; }
+  .nav__link:hover {
+    opacity: 0.5; } }
+
 main {
   padding: auto;
   margin: 30px;
