--- a/style.css
+++ b/style.css
@@ -27,6 +27,89 @@ body {background-image: url(./ReservAR_img/presence-ii.png);
                         background-size: cover;
             }
 
+
+.header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 1rem;
+      }
+      
+
+      @media all and (max-width: 700px) {
+      
+        /* Oculta el nav en la parte izquiera */
+        .nav {
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: red;
+          transform: translateX(-100vw);
+          transition: 0.5s;
+        }
+      
+        /* Muestra el nav */
+        .nav--show {
+          transform: translateX(0);
+        }
+      
+        .nav__button {
+          text-align: right;
+          margin: 1rem;
+        }
+      
+        .nav__ul {
+          list-style: none;
+          padding: 0;
+          margin: 0;
+        }
+      
+        .nav__link {
+          display: block;
+          padding: 1rem;
+          font-size: 1.5rem;
+          text-align: center;
+          text-decoration: none;
+          color: black;
+        }
+      }
+
+      @media all and (min-width: 701px) {
+      
+        /* Oculta botón de abrir o cerrar */
+        .nav__button,
+        .header__button-nav--open {
+          display: none;
+        }
+      
+        /* Adapta el nav en horizontal */
+        .nav__ul {
+          display: flex;
+          list-style: none;
+          padding: 0;
+        }
+      
+        .nav__link {
+          display: block;
+          padding: 0.5rem 1rem;
+          text-decoration: none;
+          color: rgb(39, 4, 235);
+          transition: 0.5s;
+        }
+      
+        .nav__link:hover {
+          opacity: 0.5;
+        }
+      }
+      
+
+
 main  {padding: auto;
         margin: 30px;
         width: auto;
@@ -58,6 +141,12 @@ label {font-size: 10px;
                 height: 250px;
                 display: block;
                 margin: auto;}
+#main_confirmacion {text-align: center; 
+        justify-content: center; 
+        margin: 50px;
+        padding-top: 10px;
+        font-size: 25px;
+        }
 
 #main_page{text-align: center; 
           justify-content: center; 
